; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_logical_and_expression.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_logical_and_expression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@YY__AND_AND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @parse_logical_and_expression to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_logical_and_expression(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @parse_inclusive_or_expression(i32 %6, i32* %7)
  store i32 %8, i32* %3, align 4
  br label %9

9:                                                ; preds = %13, %2
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @YY__AND_AND, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %9
  %14 = call i32 (...) @get_sym()
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @parse_inclusive_or_expression(i32 %15, i32* %5)
  store i32 %16, i32* %3, align 4
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @zend_ffi_expr_bool_and(i32* %17, i32* %5)
  br label %9

19:                                               ; preds = %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @parse_inclusive_or_expression(i32, i32*) #1

declare dso_local i32 @get_sym(...) #1

declare dso_local i32 @zend_ffi_expr_bool_and(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
